# loan_app

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: django-ci.yaml
apps/accounts/: models.py  serializers.py  tests.py  views.py
apps/loans/: admin.py  apps.py  choices.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/loans/migrations/: 0001_initial.py  0002_auto_20220423_1558.py  0002_auto_20220423_1709.py  0003_loanterm_paid_amount.py  0004_alter_loanterm_paid_amount.py
mini_aspire/: asgi.py  settings.py  urls.py  wsgi.py
